Homepage: Update homepage.html,.css, and add dots-menu.png, logo.png and demo1 - build frame and add two menu item in header

--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -1,17 +1,51 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>Binance - Cryptocurrency Exchange</title>
-        <meta name="description" content="">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="shortcut icon" type="image/x-icon" href="https://public.bnbstatic.com/static/images/common/favicon.ico" data-shuvi-head="true" />
-        <link rel="stylesheet" href="../static/css/homepage.css">
-    </head>
-    <body>
-        <div>
-            <a href="../" class="back-to-top">Back to top</a>
+
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>Binance - Cryptocurrency Exchange</title>
+    <meta name="description" content="">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="shortcut icon" type="image/x-icon" href="https://public.bnbstatic.com/static/images/common/favicon.ico"
+        data-shuvi-head="true" />
+    <script src="https://kit.fontawesome.com/0d0d9bdf04.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="../static/css/homepage.css">
+</head>
+
+<body>
+    <div id="app">
+        <div class="flex-container">
+            <header>
+                <a href="" style="margin: 0 8px;">
+                    <img src="../static/img/homepage/logo.png" alt="" style="width: 120px;height: 24px;">
+                </a>
+                <div class="flex-menu">
+                    <div class="item-menu" style="width: 58px; ">
+                        <img src="../static/img/homepage/dots-menu.png" alt="" style="width: 16px; height:16px;">
+                        <i class="fa fa-caret-down" aria-hidden="true" style="margin: 0;"></i>
+                    </div>
+                    <div class="item-menu">
+                        <p>Buy Crypto</p>
+                        <div class="vnd">VND</div>
+                        <i class="fa fa-caret-down" aria-hidden="true"></i>
+                    </div>
+                    <div class="item-menu"></div>
+                    <div class="item-menu"></div>
+                    <div class="item-menu"></div>
+                    <div class="item-menu"></div>
+                    <div class="item-menu"></div>
+                    <div class="item-menu"></div>
+                    <div class="item-menu"></div>
+                    <div class="item-menu"></div>
+                </div>
+                <div class="flex-empty"></div>
+                <div class="flex-login"></div>
+                <div class="flex-feature"></div>
+            </header>
+
         </div>
-    </body>
+    </div>
+</body>
+
 </html>
