--- a/static/css/homepage.css
+++ b/static/css/homepage.css
@@ -48,9 +48,114 @@
 }
 
 body {
-    font-family: BinancePlex,Arial,sans-serif!important
+    font-family: BinancePlex,Arial,sans-serif!important;
+    margin: 0;
+    width: 100vw;
+    min-height: 100vh;
+    overflow-y: auto;
+    overflow-x: hidden !important;
+    display: block;
 }
 
 html body {
     font-family: BinancePlex,Arial,sans-serif!important
+}
+#app{
+    width: 100vw;
+    height: 100vh;
+    overflow: hidden auto;
+    box-sizing: border-box;
+    -webkit-tap-highlight-color: transparent;
+    min-height: 100vh;
+}
+.flex-container{
+    box-sizing: border-box;
+    margin: 0;
+    min-width: 0;
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-flex-direction: column;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    min-height: 100vh;
+}
+
+@media screen and (min-width: 767px){
+    header {
+        padding-left: 16px;
+        padding-right: 16px;
+    }
+}
+header {
+    box-sizing: border-box;
+    margin: 0;
+    min-width: 0;
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    background-color: #181A20;
+    height: 64px;
+    width: 100%;
+    padding: 0 16px;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+    -webkit-align-items: center;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+}
+i{
+    color:#EAECEF;
+    margin-left: 8px;
+}
+.flex-menu{
+    display: flex;
+    height: 100%;
+}
+.item-menu{
+    padding: 0 8px;
+    box-sizing: border-box;
+    margin: 0;
+    min-width: 0;
+    display: flex;
+    font-size: 14px;
+    cursor: pointer;
+    color: #EAECEF;
+    justify-content: space-evenly;
+    align-items: center;
+    text-decoration: none;
+    height: 100%;
+}
+.vnd{
+    box-sizing: border-box;
+    margin: 0;
+    min-width: 0;
+    display: flex;
+    position: relative;
+    border-radius: 4px;
+    margin-left: 8px;
+    padding-left: 4px;
+    padding-right: 4px;
+    font-size: 12px;
+    line-height: 16px;
+    background-color: #FCD535;
+    color: #1E2329;
+}
+.vnd:before {
+    content: "";
+    position: absolute;
+    width: 0;
+    height: 0;
+    left: -3px;
+    top: 2px;
+    border-left: 0;
+    border-top: 6px solid transparent;
+    border-bottom: 6px solid transparent;
+    border-right: 6px solid;
+    border-right-color: #F0B90B;
 }
