Homepage: Update html, css and add demo2 - header: obtain all menu items

--- a/static/css/homepage.css
+++ b/static/css/homepage.css
@@ -55,8 +55,12 @@ body {
     overflow-y: auto;
     overflow-x: hidden !important;
     display: block;
+    line-height: 1.15;
+    text-size-adjust: 100%;
 }
-
+.flex-empty{
+    width: 108.77px;
+}
 html body {
     font-family: BinancePlex,Arial,sans-serif!important
 }
@@ -92,26 +96,17 @@ header {
     box-sizing: border-box;
     margin: 0;
     min-width: 0;
-    display: -webkit-box;
-    display: -webkit-flex;
-    display: -ms-flexbox;
     display: flex;
     background-color: #181A20;
     height: 64px;
     width: 100%;
     padding: 0 16px;
-    -webkit-user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
-    user-select: none;
-    -webkit-align-items: center;
-    -webkit-box-align: center;
-    -ms-flex-align: center;
     align-items: center;
 }
 i{
     color:#EAECEF;
-    margin-left: 8px;
+    margin:0 4px;
+    opacity: 0.6;
 }
 .flex-menu{
     display: flex;
@@ -158,4 +153,10 @@ i{
     border-bottom: 6px solid transparent;
     border-right: 6px solid;
     border-right-color: #F0B90B;
+}
+
+.flex-login{
+    padding: 0 16px;
+    display: flex;
+
 }
