--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -22,7 +22,7 @@
                 </a>
                 <div class="flex-menu">
                     <div class="item-menu" style="width: 58px; ">
-                        <img src="../static/img/homepage/dots-menu.png" alt="" style="width: 16px; height:16px;">
+                        <img src="../static/img/homepage/dots-menu.png" alt="" style="width: 20px; height:20px;">
                         <i class="fa fa-caret-down" aria-hidden="true" style="margin: 0;"></i>
                     </div>
                     <div class="item-menu">
@@ -30,14 +30,36 @@
                         <div class="vnd">VND</div>
                         <i class="fa fa-caret-down" aria-hidden="true"></i>
                     </div>
-                    <div class="item-menu"></div>
-                    <div class="item-menu"></div>
-                    <div class="item-menu"></div>
-                    <div class="item-menu"></div>
-                    <div class="item-menu"></div>
-                    <div class="item-menu"></div>
-                    <div class="item-menu"></div>
-                    <div class="item-menu"></div>
+                    <div class="item-menu">
+                        <p>Markets</p>
+                        <i class="fa fa-caret-down" aria-hidden="true"></i>
+                    </div>
+                    <div class="item-menu">
+                        <p>Trade</p>
+                        <i class="fa fa-caret-down" aria-hidden="true"></i>
+                    </div>
+                    <div class="item-menu">
+                        <p>Delivatives</p>
+                        <i class="fa fa-caret-down" aria-hidden="true"></i>
+                    </div>
+                    <div class="item-menu">
+                        <p>Earn</p>
+                        <i class="fa fa-caret-down" aria-hidden="true"></i>
+                    </div>
+                    <div class="item-menu">
+                        <p>Finance</p>
+                        <i class="fa fa-caret-down" aria-hidden="true"></i>
+                    </div>
+                    <div class="item-menu">
+                        <p>NFT</p>
+                    </div>
+                    <div class="item-menu">
+                        <p>Institutional</p>
+                        <i class="fa fa-caret-down" aria-hidden="true"></i>
+                    </div>
+                    <div class="item-menu">
+                        <p>Feed</p>
+                    </div>
                 </div>
                 <div class="flex-empty"></div>
                 <div class="flex-login"></div>
