--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -17,7 +17,7 @@
     <div id="app">
         <div class="flex-container">
             <header>
-                <a href="" style="margin: 0 8px;">
+                <a href="" style="margin: 0 8px;display: flex;align-items: center;align-items: center;">
                     <img src="../static/img/homepage/logo.png" alt="" style="width: 120px;height: 24px;">
                 </a>
                 <div class="flex-menu">
@@ -62,7 +62,13 @@
                     </div>
                 </div>
                 <div class="flex-empty"></div>
-                <div class="flex-login"></div>
+                <div class="flex-login">
+                    <a href="">Log In</a>
+                    <a href="" class="flex-a">
+                        <i class="fa fa-gift" aria-hidden="true" style="color: black;"></i>
+                        <p>Register</p>
+                    </a>
+                </div>
                 <div class="flex-feature"></div>
             </header>
 
