Homepage: Header -  Update html, css and add demo4 - more other features

--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -12,7 +12,6 @@
     <script src="https://kit.fontawesome.com/0d0d9bdf04.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="../static/css/homepage.css">
 </head>
-
 <body>
     <div id="app">
         <div class="flex-container">
@@ -69,7 +68,18 @@
                         <p>Register</p>
                     </a>
                 </div>
-                <div class="flex-feature"></div>
+                <div class="flex-feature">
+                    <div class="item1">
+                        <i class="fas fa-download"></i>
+                    </div>
+                    <div class="item2">
+                        <i class="fas fa-globe-africa"></i>
+                        <p class="bar">|</p>
+                        <p>VND</p>
+                        <p class="bar">|</p>
+                        <i class="fas fa-sun"></i>
+                    </div>
+                </div>
             </header>
 
         </div>
