--- a/static/css/homepage.css
+++ b/static/css/homepage.css
@@ -184,3 +184,39 @@ i{
     font-size: 14px;
     margin-left: 12px;
 }
+.flex-feature{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+
+}
+.flex-feature .item1{
+    padding: 0 8px;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.flex-feature .item2{
+    padding: 0 8px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    color: #EAECEF;
+    font-size: 14px;
+    height: 100%;
+
+}
+.fa-globe-africa{
+    margin: 0;
+    color: #ffffff;
+
+}
+.flex-feature p{
+ margin: 0;
+}
+.flex-feature .item2 .bar{
+    margin: 0 8px;
+    color: #5E6673;
+}
