--- a/static/css/homepage.css
+++ b/static/css/homepage.css
@@ -213,10 +213,52 @@ i{
     color: #ffffff;
 
 }
+.flex-feature p, i{
+ 
+ cursor: pointer;
+}
 .flex-feature p{
- margin: 0;
+    margin: 0;
 }
 .flex-feature .item2 .bar{
     margin: 0 8px;
     color: #5E6673;
+    cursor: none;
+}
+.gift{
+    position: relative;
+    top: 0;
+    z-index: 5;
+    margin: 0;
+    box-sizing: border-box;
+    background-color: rgb(60, 38, 1);
+}
+.gift a{
+    margin: auto;
+    padding: 12px 16px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.gift p{
+    color: rgb(183, 189, 198);
+    margin: 0;
+    margin-right: 8px;
+}
+.gift i{
+    font-size:15px;
+    margin: 0;
+    margin-right: 10px;
+}
+.redeem{
+    box-sizing: border-box;
+    margin: 0px 0px 0px 24px;
+    min-width: 0px;
+    padding: 4px 8px;
+    background-color: rgb(252, 213, 53);
+    color: rgb(24, 26, 32);
+    border-radius: 4px;
+    font-weight: 500;
+    font-size: 12px;
+    line-height: 16px;
 }
