--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -81,7 +81,16 @@
                     </div>
                 </div>
             </header>
-
+            <main>
+                <div class="gift">
+                    <a href="">
+                        <i class="fa fa-gift" aria-hidden="true" style="color:rgb(255, 196, 0)"></i>
+                        <p>Register now — Get up to 100 USDT in trading fee rebate (for verified users)</p>
+                        <div class="redeem">Redeem Gift</div>
+                    </a>
+                </div>
+            </main>
+            <footer></footer>
         </div>
     </div>
 </body>
