--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -64,7 +64,7 @@
                 <div class="flex-login">
                     <a href="">Log In</a>
                     <a href="" class="flex-a">
-                        <i class="fa fa-gift" aria-hidden="true" style="color: black;"></i>
+                        <i class="fa fa-gift" aria-hidden="true" style="color: black; opacity: 1;"></i>
                         <p>Register</p>
                     </a>
                 </div>
@@ -88,6 +88,23 @@
                         <p>Register now — Get up to 100 USDT in trading fee rebate (for verified users)</p>
                         <div class="redeem">Redeem Gift</div>
                     </a>
+                </div>
+                <div class="content2-container">
+                    <div class="content2">
+                        <div class="content2-main">
+                            <div class="left">
+                                <h1>Buy, trade, and hold 350+ cryptocurrencies on Binance</h1>
+                                <div class="sign-up">
+                                    <a href="">
+                                        <i class="fa fa-gift" aria-hidden="true" style="font-size: 18px; color: rgb(240, 185, 11); padding: 4px;"></i>
+                                        <p>Trade Bitcoin for free</p>
+                                        <i class="fas fa-greater-than" style="padding: 5px;"></i>
+                                    </a>
+                                </div>
+                            </div>
+                            
+                        </div>
+                    </div>
                 </div>
             </main>
             <footer></footer>
