Homepage: Content2 - Update html, css and Add background-content2.png, foreground-content2.png, demo7 - put image background and flex right

--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -102,7 +102,9 @@
                                     </a>
                                 </div>
                             </div>
-                            
+                            <div class="right">
+                                <img src="../static/img/homepage/foreground-content2.png" alt="">
+                            </div>
                         </div>
                     </div>
                 </div>
