--- a/static/css/homepage.css
+++ b/static/css/homepage.css
@@ -1,54 +1,54 @@
 @font-face {
     font-family: 'BinancePlex';
     font-display: swap;
-    src: url('../fonts/IBMPlexSans-Light.woff2') format('woff2'),url('../fonts/IBMPlexSans-Light.otf') format('opentype');
+    src: url('../fonts/IBMPlexSans-Light.woff2') format('woff2'), url('../fonts/IBMPlexSans-Light.otf') format('opentype');
     font-weight: 200
 }
 
 @font-face {
     font-family: 'BinancePlex';
     font-display: swap;
-    src: url('../fonts/IBMPlexSans-Light.woff2') format('woff2'),url('../fonts/IBMPlexSans-Light.otf') format('opentype');
+    src: url('../fonts/IBMPlexSans-Light.woff2') format('woff2'), url('../fonts/IBMPlexSans-Light.otf') format('opentype');
     font-weight: 300
 }
 
 @font-face {
     font-family: 'BinancePlex';
     font-display: swap;
-    src: url('../fonts/IBMPlexSans-Regular.woff2') format('woff2'),url('../fonts/IBMPlexSans-Regular.otf') format('opentype');
+    src: url('../fonts/IBMPlexSans-Regular.woff2') format('woff2'), url('../fonts/IBMPlexSans-Regular.otf') format('opentype');
     font-weight: 400
 }
 
 @font-face {
     font-family: 'BinancePlex';
     font-display: swap;
-    src: url('../fonts/IBMPlexSans-Medium.woff2') format('woff2'),url('../fonts/IBMPlexSans-Medium.otf') format('opentype');
+    src: url('../fonts/IBMPlexSans-Medium.woff2') format('woff2'), url('../fonts/IBMPlexSans-Medium.otf') format('opentype');
     font-weight: 500
 }
 
 @font-face {
     font-family: 'BinancePlex';
     font-display: swap;
-    src: url('../fonts/IBMPlexSans-SemiBold.woff2') format('woff2'),url('../fonts/IBMPlexSans-SemiBold.otf') format('opentype');
+    src: url('../fonts/IBMPlexSans-SemiBold.woff2') format('woff2'), url('../fonts/IBMPlexSans-SemiBold.otf') format('opentype');
     font-weight: 600
 }
 
 @font-face {
     font-family: 'BinancePlex';
     font-display: swap;
-    src: url('../fonts/IBMPlexSans-SemiBold.woff2') format('woff2'),url('../fonts/IBMPlexSans-SemiBold.otf') format('opentype');
+    src: url('../fonts/IBMPlexSans-SemiBold.woff2') format('woff2'), url('../fonts/IBMPlexSans-SemiBold.otf') format('opentype');
     font-weight: 700
 }
 
 @font-face {
     font-family: 'BinancePlex';
     font-display: swap;
-    src: url('../fonts/IBMPlexSans-SemiBold.woff2') format('woff2'),url('../fonts/IBMPlexSans-SemiBold.otf') format('opentype');
+    src: url('../fonts/IBMPlexSans-SemiBold.woff2') format('woff2'), url('../fonts/IBMPlexSans-SemiBold.otf') format('opentype');
     font-weight: 800
 }
 
 body {
-    font-family: BinancePlex,Arial,sans-serif!important;
+    font-family: BinancePlex, Arial, sans-serif !important;
     margin: 0;
     width: 100vw;
     min-height: 100vh;
@@ -58,13 +58,16 @@ body {
     line-height: 1.15;
     text-size-adjust: 100%;
 }
-.flex-empty{
+
+.flex-empty {
     width: 108.77px;
 }
+
 html body {
-    font-family: BinancePlex,Arial,sans-serif!important
+    font-family: BinancePlex, Arial, sans-serif !important
 }
-#app{
+
+#app {
     width: 100vw;
     height: 100vh;
     overflow: hidden auto;
@@ -72,7 +75,8 @@ html body {
     -webkit-tap-highlight-color: transparent;
     min-height: 100vh;
 }
-.flex-container{
+
+.flex-container {
     box-sizing: border-box;
     margin: 0;
     min-width: 0;
@@ -85,7 +89,8 @@ html body {
     flex-direction: column;
     min-height: 100vh;
 }
-a{
+
+a {
     text-decoration: none;
     color: rgb(234, 236, 239);
     font-weight: 400;
@@ -93,12 +98,14 @@ a{
     line-height: 20px;
     cursor: pointer;
 }
-@media screen and (min-width: 767px){
+
+@media screen and (min-width: 767px) {
     header {
         padding-left: 16px;
         padding-right: 16px;
     }
 }
+
 header {
     box-sizing: border-box;
     margin: 0;
@@ -110,16 +117,19 @@ header {
     padding: 0 16px;
     align-items: center;
 }
-header i{
-    color:#EAECEF;
-    margin:0 4px;
+
+header i {
+    color: #EAECEF;
+    margin: 0 4px;
     opacity: 0.6;
 }
-.flex-menu{
+
+.flex-menu {
     display: flex;
     height: 100%;
 }
-.item-menu{
+
+.item-menu {
     padding: 0 8px;
     box-sizing: border-box;
     margin: 0;
@@ -133,7 +143,8 @@ header i{
     text-decoration: none;
     height: 100%;
 }
-.vnd{
+
+.vnd {
     box-sizing: border-box;
     margin: 0;
     min-width: 0;
@@ -148,6 +159,7 @@ header i{
     background-color: #FCD535;
     color: #1E2329;
 }
+
 .vnd:before {
     content: "";
     position: absolute;
@@ -162,18 +174,20 @@ header i{
     border-right-color: #F0B90B;
 }
 
-.flex-login{
+.flex-login {
     padding: 0 16px;
     display: flex;
     justify-content: center;
     align-items: center;
 }
-.flex-login a{
+
+.flex-login a {
     margin: 0;
     padding: 6px 12px;
     max-height: 20px;
 }
-.flex-login .flex-a{
+
+.flex-login .flex-a {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -184,21 +198,24 @@ header i{
     font-size: 14px;
     margin-left: 12px;
 }
-.flex-feature{
+
+.flex-feature {
     display: flex;
     justify-content: center;
     align-items: center;
     height: 100%;
 
 }
-.flex-feature .item1{
+
+.flex-feature .item1 {
     padding: 0 8px;
     height: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
 }
-.flex-feature .item2{
+
+.flex-feature .item2 {
     padding: 0 8px;
     display: flex;
     justify-content: space-between;
@@ -208,24 +225,30 @@ header i{
     height: 100%;
 
 }
-.fa-globe-africa{
+
+.fa-globe-africa {
     margin: 0;
     color: #ffffff;
 
 }
-.flex-feature p, i{
- 
- cursor: pointer;
+
+.flex-feature p,
+i {
+
+    cursor: pointer;
 }
-.flex-feature p{
+
+.flex-feature p {
     margin: 0;
 }
-.flex-feature .item2 .bar{
+
+.flex-feature .item2 .bar {
     margin: 0 8px;
     color: #5E6673;
     cursor: none;
 }
-.gift{
+
+.gift {
     position: relative;
     top: 0;
     z-index: 5;
@@ -233,24 +256,28 @@ header i{
     box-sizing: border-box;
     background-color: rgb(60, 38, 1);
 }
-.gift a{
+
+.gift a {
     margin: auto;
     padding: 12px 16px;
     display: flex;
     align-items: center;
     justify-content: center;
 }
-.gift p{
+
+.gift p {
     color: rgb(183, 189, 198);
     margin: 0;
     margin-right: 8px;
 }
-.gift i{
-    font-size:15px;
+
+.gift i {
+    font-size: 15px;
     margin: 0;
     margin-right: 10px;
 }
-.redeem{
+
+.redeem {
     box-sizing: border-box;
     margin: 0px 0px 0px 24px;
     min-width: 0px;
@@ -262,7 +289,8 @@ header i{
     font-size: 12px;
     line-height: 16px;
 }
-.content2-container{
+
+.content2-container {
     background-image: url(../img/homepage/background-content2.png);
     box-sizing: border-box;
     margin: 0;
@@ -274,7 +302,8 @@ header i{
     background-repeat: no-repeat;
     background-position: center center;
 }
-.content2{
+
+.content2 {
     padding: 0 24px;
     box-sizing: border-box;
     margin: 0;
@@ -282,43 +311,77 @@ header i{
     margin: auto;
     max-width: 1248px;
 }
-.content2-main{
+
+.content2-main {
     padding-top: 80px;
     min-width: none;
     display: flex;
 }
-.content2-main .left{
+
+.content2-main .left {
     width: 560px;
     margin-right: 106px;
-    
+
 }
-.content2-main .left h1{
+
+.content2-main .left h1 {
     color: #EAECEF;
     font-weight: 600;
     font-size: 40px;
     line-height: 48px;
     margin: 0;
 }
-.content2-main .right{
+
+.content2-main .right {
     width: auto;
 }
-.content2-main .right img{
+
+.content2-main .right img {
     width: 534px;
     height: 440px;
 
 }
-.sign-up{
+
+.sign-up {
     margin-top: 48px;
 }
-.sign-up a{
-    display:flex;
+
+.sign-up a {
+    display: flex;
     align-items: center;
-    justify-content:start;
+    justify-content: start;
 }
-.sign-up a p{
+
+#su-top {
     margin: 0;
     margin-left: 7px;
     font-weight: 400;
     font-size: 20px;
     line-height: 28px;
+}
+
+.sign-up .signup-with-container {
+    margin-top: 16px;
+    display: flex;
+}
+
+.sign-up .signup-with {
+    margin-top: 8px;
+    width: 384px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #FCD535;
+    padding: 12px 24px;
+    border-radius: 4px;
+    box-sizing: border-box;
+    color: #181A20;
+}
+
+.su {
+    margin: 0 !important;
+    min-width: 0;
+    font-weight: 500;
+    font-size: 16px !important;
+    line-height: 24px;
 }
