--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -97,9 +97,15 @@
                                 <div class="sign-up">
                                     <a href="">
                                         <i class="fa fa-gift" aria-hidden="true" style="font-size: 18px; color: rgb(240, 185, 11); padding: 4px;"></i>
-                                        <p>Trade Bitcoin for free</p>
-                                        <i class="fas fa-greater-than" style="padding: 5px;"></i>
+                                        <p id="su-top">Trade Bitcoin for free </p>
+                                        <i class="fas fa-greater-than" style="padding: 5px; opacity: 0.7;"></i>
                                     </a>
+                                    <div class="signup-with-container">
+                                        <a class="signup-with" href="">
+                                            <i class="fa fa-user" aria-hidden="true" style="margin-right: 8px;"></i>
+                                            <p class="su">Sign up with Email or Phone</p>
+                                        </a>
+                                    </div>
                                 </div>
                             </div>
                             <div class="right">
