--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -101,10 +101,27 @@
                                         <i class="fas fa-greater-than" style="padding: 5px; opacity: 0.7;"></i>
                                     </a>
                                     <div class="signup-with-container">
-                                        <a class="signup-with" href="">
-                                            <i class="fa fa-user" aria-hidden="true" style="margin-right: 8px;"></i>
-                                            <p class="su">Sign up with Email or Phone</p>
-                                        </a>
+                                        <div class="signup">
+                                            <a class="signup-with" href="">
+                                                <i class="fa fa-user" aria-hidden="true" style="margin-right: 8px;"></i>
+                                                <p class="su">Sign up with Email or Phone</p>
+                                            </a>
+                                            <div class="or">
+                                                <div class="hr"></div>
+                                                <div class="mid">or continue with</div>
+                                                <div class="hr"></div>
+                                            </div>
+                                            <div class="btn-plg">
+                                                <a href="">
+                                                   <img src="../static/img/homepage/google-icon.png" alt="" width="16px" style="margin-right: 8px;">
+                                                    <p>Google</p>
+                                                </a>
+                                                <a href="" style="margin-left: 24px;">
+                                                    <i class="fa fa-apple" aria-hidden="true"></i>
+                                                    <p>Apple</p>
+                                                </a>
+                                            </div>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
