BAB_Token: Update html, css: font-family, demo,bab_token,hinh6...

--- a/templates/bab_token.html
+++ b/templates/bab_token.html
@@ -75,6 +75,9 @@
                         </div>
                     </div>
                 </div>
+                <div id="text_title">
+                    <div id="faq">FAQ</div>
+                </div>
             </div>
         </div>
         <div id="below">
