--- a/static/css/bab_token.css
+++ b/static/css/bab_token.css
@@ -2,6 +2,15 @@ body {
     margin: 0px;
 }
 
+html body {
+    font-family: BinancePlex, Arial, sans-serif!important;
+}
+
+html {
+    tab-size: 4;
+    font-family: ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+}
+
 #product {
     width: 1350px;
     height: 2083.45px;
@@ -20,7 +29,7 @@ body {
     height: 1365.95px;
     display: flex;
     justify-content: center;
-    background-image: url(../img/babt_token/bg1440.svg), linear-gradient(180deg, #06080B 79.61%, #76808F 126.01%);
+    background-image: url(../img/bab_token/bg1440.svg), linear-gradient(180deg, #06080B 79.61%, #76808F 126.01%);
     background-size: cover;
     background-position: top;
     background-repeat: no-repeat
@@ -81,7 +90,7 @@ body {
 
 #public {
     height: 306px;
-    background-image: url(../img/babt_token/logobg.svg);
+    background-image: url(../img/bab_token/logobg.svg);
 }
 
 .ad {
@@ -95,7 +104,7 @@ body {
     margin-top: 8px;
     margin-bottom: 8px;
     text-shadow: 0px 0px 8px rgb(241 209 99 / 70%);
-    font-size: 48px;
+    font-size: 46px;
     font-weight: 600;
     line-height: 56px;
     height: 56px;
@@ -106,7 +115,7 @@ body {
 }
 
 #center_text_1 {
-    margin-top: 8px;
+    margin-top: 14px;
     display: flex;
     justify-content: center;
     height: 23px;
@@ -117,7 +126,7 @@ body {
 #center_table {
     display: flex;
     justify-content: center;
-    margin-top: 48px;
+    margin-top: 50px;
     width: 100%;
     height: 304.95px;
     background-image: linear-gradient(211.03deg, #2B2F36 10.78%, rgba(43, 47, 54, 0) 54.07%, #2B2F36 108.18%);
@@ -194,4 +203,22 @@ body {
     padding-right: 12px;
     padding-top: 6px;
     padding-bottom: 6px;
+}
+
+#text_title {
+    margin-top: 97px;
+    width: 100%;
+    height: 466px;
+}
+
+#faq {
+    font-size: 28px;
+    font-weight: 600;
+    line-height: 36px;
+    text-shadow: 0px 0px 8px rgb(241 209 99 / 70%);
+    background-clip: text;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    background-image: linear-gradient(105.53deg, #fcea9c 23.97%, #f0b90b 107.27%);
+    margin-bottom: 24px;
 }
