--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -129,6 +129,24 @@
                                 <img src="../static/img/homepage/foreground-content2.png" alt="">
                             </div>
                         </div>
+                        <div class="content2-bottom">
+                            <div class="text">
+                                <h1>$38 billion</h1>
+                                <p>24h trading volume on Binance exchange</p>
+                            </div>
+                            <div class="text">
+                                <h1>350+</h1>
+                                <p>Cryptocurrencies listed</p>
+                            </div>
+                            <div class="text">
+                                <h1>120 million </h1>
+                                <p>Registered users</p>
+                            </div>
+                            <div class="text">
+                                <h1> <0.10% </h1>
+                                <p>Lowest transaction fees</p>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </main>
