BAB_Token: Update html, css: text_title, demo,bab_token,hinh7...

--- a/templates/bab_token.html
+++ b/templates/bab_token.html
@@ -77,11 +77,39 @@
                 </div>
                 <div id="text_title">
                     <div id="faq">FAQ</div>
+                    <div id="text_question">
+                        <div class="question">
+                            <div class="colne_question">
+                                <div class="question_1"><b>What is Binance Account Bound Token?</b></div>
+                                <div class="question_2">Binance Account Bound (BAB) tokens are the credentials of Binance users that have passed KYC. Since it is a type of Soulbound Token (SBT), it has three key properties: it is non-transferable, it cannot be transferred from
+                                    one address to another, and it is revocable. It can be revoked by issuers. One UID can only have one BAB token at one time and on one chain.</div>
+                            </div>
+                            <div class="colne_question">
+                                <div class="question_1"><b>Where can I view my BAB token?</b></div>
+                                <div class="question_2">The BAB token will be issued to the address you provided and you can check your BAB token on any third-party wallet that supports NFTs. Before you view your BAB token, you need to make sure your wallet network has selected
+                                    the BNB Smart Chain.</div>
+                            </div>
+                        </div>
+                        <div class="question">
+                            <div class="colne_question">
+                                <div class="question_1"><b>What if I lost my access to the BAB token?</b></div>
+                                <div class="question_2">If you somehow lose access to your wallet, you can revoke the token with your Binance account. Once revoked, you can mint again after 72 hours.</div>
+                            </div>
+                            <div class="colne_question">
+                                <div class="question_1"><b>Is there any way to transfer my BAB token to another address?</b></div>
+                                <div class="question_2">If you want to transfer your BAB token to another address, you can revoke it and then mint it to your new address. Please be aware that after you revoke your BAB token, you will have to wait 72 hours before you can mint
+                                    again.
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
         <div id="below">
+            <div>
 
+            </div>
         </div>
     </div>
 </body>
