--- a/static/css/bab_token.css
+++ b/static/css/bab_token.css
@@ -222,3 +222,35 @@ html {
     background-image: linear-gradient(105.53deg, #fcea9c 23.97%, #f0b90b 107.27%);
     margin-bottom: 24px;
 }
+
+#text_question {
+    width: 100%;
+    height: 326px;
+    display: flex;
+    justify-content: space-between;
+}
+
+.question_1 {
+    font-size: 15px;
+    font-weight: 500;
+    line-height: 24px;
+    margin-bottom: 8px;
+    color: rgb(186, 179, 179);
+}
+
+.colne_question {
+    margin-bottom: 32px;
+    height: 142px;
+}
+
+.question {
+    width: 508px;
+    height: 142px;
+}
+
+.question_2 {
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 22px;
+    color: rgba(118, 111, 111, 0.911);
+}
