--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -149,6 +149,15 @@
                         </div>
                     </div>
                 </div>
+                <div class="content3-container">
+                    <div class="content3">
+                        <div class="slide">
+                            <a href="">
+                                <img src="../static/img/homepage/slide.png" alt="">
+                            </a>
+                        </div>
+                    </div>
+                </div>
             </main>
             <footer></footer>
         </div>
