Homepage: Content3 - Update html, css and add demo12 - pagination to slide

--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -156,6 +156,17 @@
                                 <img src="../static/img/homepage/slide.png" alt="">
                             </a>
                         </div>
+                        <ul>
+                            <li class="active">
+                                <button>1</button>
+                            </li>
+                            <li>
+                                <button>2</button>
+                            </li>
+                            <li>
+                                <button>3</button>
+                            </li>
+                        </ul>
                     </div>
                 </div>
             </main>
