--- a/static/css/homepage.css
+++ b/static/css/homepage.css
@@ -495,7 +495,7 @@ margin-top: 8px;
     margin: 0;
     margin: auto;
     padding: 0 24px;
-    max-width: 1248px;
+    max-width: 1200px;
 }
 .content3 .slide{
     box-sizing: border-box;
@@ -516,4 +516,42 @@ margin-top: 8px;
     height: auto;
     width: 100%;
     border-radius: 16px;
+}
+.content3 ul{
+    display: flex;
+    justify-content: center;
+    list-style-type: none;
+}
+
+.content3 ul li{
+    display: block;
+    position: relative;
+    box-sizing: content-box;
+    width: 8px;
+    height: 3px;
+    margin: 0 2px;
+    margin-right: 3px; 
+    margin-left: 3px;
+    padding: 0;
+    text-align: center;
+    text-indent: -999px;
+}
+li.active{
+    width: 24px !important;
+}
+li.active button{
+    background-color: #FCD535 !important;
+}
+.content3 ul li button{
+    display: block;
+    width: 100%;
+    height: 8px;
+    padding: 0;
+    color: transparent;
+    font-size: 12px;
+    background-color: #474D57;
+    border: 0;
+    border-radius: 8px;
+    outline: none;
+    cursor: pointer;
 }
