--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -169,6 +169,23 @@
                         </ul>
                     </div>
                 </div>
+                <div class="content4-container">
+                    <div class="content4">
+                        <div class="title">
+                            <h1>Popular cryptocurrencies</h1>
+                            <a href="">
+                                View more markets 
+                                <i class="fas fa-greater-than    " style="margin-left: 5px;"></i>
+                            </a>
+                        </div>
+                        <div class="name-col">
+                            <p>Name</p>
+                            <p>Last</p>
+                            <p>24h Change</p>
+                            <p>Market Cap</p>
+                        </div>
+                    </div>
+                </div>
             </main>
             <footer></footer>
         </div>
